--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_HOST=http://localhost:3000/api/v1
-VITE_PROJECT_TOKEN=c_KYqVv55gkrqPl7vcVHZw
+VITE_API_HOST=https://sandcastle.taxonworks.org/api/v1
+VITE_PROJECT_TOKEN=9GpGYIuCMvVnA8hCDmT_Iw
