--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -16,6 +17,8 @@
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue-leaflet/vue-leaflet": "^0.6.1",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.7.0",
+    "eslint-plugin-vue": "^8.3.0",
     "postcss": "^8.4.5",
     "sass": "^1.48.0",
     "tailwindcss": "^3.0.13",
