--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_API_HOST=https://sandcastle.taxonworks.org/api/v1
 VITE_PROJECT_TOKEN=NOw8ZKe7O0axmMkNPZn35Q
 VITE_BASE_URL=/
+VITE_ROUTER_HASH_MODE=false
