--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "@vitejs/plugin-vue": "^2.3.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
     "autoprefixer": "^10.4.4",
     "eslint": "^8.12.0",
     "eslint-plugin-vue": "^8.5.0",
     "postcss": "^8.4.12",
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
-    "vite": "^2.8.6"
+    "vite": "^2.9.0"
   }
 }
