--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ VITE_MAP_SERVER_TILES=https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png
 VITE_PAGE_PROJECT_CITATION="Orthoptera Species File"
 VITE_PAGE_PROJECT_URL="https://jlpereira.github.io/vite_taxonworks_public_view/"
 VITE_PAGE_PROJECT_AUTHORS="Cigliano, M.M., H. Braun, D.C. Eades & D. Otte."
-VITE_PAGE_HEADER_LOGO="/public/images/taxonworks-logo.svg"
+VITE_PAGE_HEADER_LOGO="/images/taxonworks-logo.svg"
