Markdown plugin, add about and home pages

--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ VITE_API_HOST=https://sandcastle.taxonworks.org/api/v1
 VITE_PROJECT_TOKEN=NOw8ZKe7O0axmMkNPZn35Q
 VITE_BASE_URL=/
 VITE_MAP_SERVER_TILES=https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png
+VITE_PROJECT_NAME="Orthoptera Species File"
 VITE_PAGE_PROJECT_CITATION="Orthoptera Species File"
 VITE_PAGE_PROJECT_URL="https://jlpereira.github.io/vite_taxonworks_public_view/"
 VITE_PAGE_PROJECT_AUTHORS="Cigliano, M.M., H. Braun, D.C. Eades & D. Otte."
-VITE_PAGE_HEADER_LOGO="images/taxonworks-logo.svg"
+VITE_PAGE_HEADER_LOGO=
