--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "@vitejs/plugin-vue": "^2.3.1",
@@ -24,6 +25,7 @@
     "postcss": "^8.4.12",
     "sass": "^1.51.0",
     "tailwindcss": "^3.0.24",
-    "vite": "^2.9.6"
+    "vite": "^2.9.6",
+    "vite-plugin-md": "^0.13.1"
   }
 }
