--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite-ssg build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
@@ -19,6 +19,7 @@
     "@typescript-eslint/parser": "^5.21.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/eslint-config-typescript": "^10.0.0",
+    "@vueuse/head": "^0.7.6",
     "autoprefixer": "^10.4.5",
     "eslint": "^8.14.0",
     "eslint-plugin-vue": "^8.7.1",
@@ -26,6 +27,7 @@
     "sass": "^1.51.0",
     "tailwindcss": "^3.0.24",
     "vite": "^2.9.6",
-    "vite-plugin-md": "^0.13.1"
+    "vite-plugin-md": "^0.13.1",
+    "vite-ssg": "^0.20.0"
   }
 }
