Update copyright image link

--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ VITE_PAGE_PROJECT_URL="https://jlpereira.github.io/vite_taxonworks_public_view/"
 VITE_PAGE_PROJECT_AUTHORS="Cigliano, M.M., H. Braun, D.C. Eades & D. Otte."
 VITE_PAGE_HEADER_LOGO=
 
-VITE_PAGE_FOOTER_COPYRIGHT_IMAGE="http://orthoptera.speciesfile.org/Common/img_logo/CCby-sa80x15.png"
+VITE_PAGE_FOOTER_COPYRIGHT_IMAGE="https://i.creativecommons.org/l/by-sa/4.0/80x15.png"
 VITE_PAGE_FOOTER_COPYRIGHT_IMAGE_LINK="http://creativecommons.org/licenses/by-sa/4.0/"
 VITE_PAGE_FOOTER_COPYRIGHT_TEXT="Except where otherwise noted, content on this site is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License."
